# Splatpipe

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  package.json  pyproject.toml
.codex-run/: bunny_edge_rules.py  deploy_ibug_cs_v23.py  deploy_ibug_cs_v24.py  deploy_ibug_cs_v25.py  deploy_scene_cs.py  deploy_spark_fork.py  fix_scene_desc.py  ibug_probe_views.json  make_share_preview.py
.github/workflows/: ci.yml
config/: defaults.toml
docs/: HANDOFF.md  cluster_sh_convergence.md  dcc-bridge.md  postshot_feature_request.md  scene_stats.md
docs/plans/: 2026-02-14_collision.md  2026-05-07_spz4_integration.md  2026-05-14_perf_optimization.md  2026-05-15_set-start-view.md
src/splatpipe/: __init__.py
src/splatpipe/cli/: assemble_cmd.py  build_lod_cmd.py  clean_cmd.py  deploy_cmd.py  init_cmd.py  main.py  path_cmd.py  publish_cmd.py  run_cmd.py  serve_cmd.py  set_start_view_cmd.py  (+3 more)
tests/: conftest.py  test_cli.py  test_colmap_filters.py  test_colmap_parsers.py  test_colmap_ply_io.py  test_config.py  test_config_extended.py  test_dcc_routes.py  test_deploy_extended.py  test_events.py  test_export.py  test_integration.py  test_lod_assembly.py  test_path_io.py  test_project.py  test_project_extended.py  test_publish.py  test_route_helpers.py  test_runner.py  test_spark_chunked.py  test_steps_base.py  test_trainers.py  test_web_routes.py
tests/manual/: filter-compare.html  pc-2-18-1.html  pc-compare.html
tests/test_data/: sample_state.json  tiny_cameras.txt  tiny_cloud.ply  tiny_images.txt  tiny_points3d.txt
tools/dcc-bridge/: README.md  build.py
(+48 files in other folders)
