[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splatpipe"
version = "0.1.3"
description = "Automated photogrammetry-to-Gaussian-splatting pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
]
web = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
    "sse-starlette>=2.0.0",
]

[project.scripts]
splatpipe = "splatpipe.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/splatpipe"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
